src/main/java/org/example/error/exception/SyntacticalException.java
package org.example.error.exception;

public class SyntacticalException extends Exception {

	public SyntacticalException(String errorMessage) {
		super(errorMessage);
	}

}
